BUG#35468: Slowdown and wrong result for uncorrelated subquery w/o where - Moved LooseScan functionality from READ_RECORD functions to join runtime.   (This enables use of insideout together with range access) - Let best_access_path() save the number of the index to be used by the   insideout scan and #keyparts (just keeping a flag wasn't enough for   full-index insideout scans). - Made setup_semijoin_dups_elimination() define and use an enum instead   of numeric constants. - Addressed review feedback